--- a/ism/css/my-slider.css
+++ b/ism/css/my-slider.css
@@ -560,6 +560,15 @@ p.ism-badge a.ism-link:hover {
     top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);
 }
 
+#home-slider .ism-slide-22 .ism-img-frame {
+    width: 100%;
+}
+
+#home-slider .ism-slide-22 .ism-img {
+    width: 100%;
+    top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);
+}
+
 /* CAPTIONS */
 
 #home-slider .ism-slide-0 .ism-caption-0.ism-caption-anim {
@@ -823,6 +832,18 @@ p.ism-badge a.ism-link:hover {
 }
 
 #home-slider .ism-slide-21 .ism-caption-2.ism-caption-anim {
+    -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
+}
+
+#home-slider .ism-slide-22 .ism-caption-0.ism-caption-anim {
+    -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
+}
+
+#home-slider .ism-slide-22 .ism-caption-1.ism-caption-anim {
+    -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
+}
+
+#home-slider .ism-slide-22 .ism-caption-2.ism-caption-anim {
     -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
 }
 
@@ -1477,6 +1498,36 @@ p.ism-badge a.ism-link:hover {
 }
 
 #home-slider .ism-slide-21 .ism-caption-2 {
+    font-size: 1.25em;
+    font-family: sans-serif;
+    position: absolute; top: 20%;
+    left: 60%;
+    border-radius: 4px;
+    border: none;
+    color: #fff; background-color: rgba(0, 0, 0, 0.70);
+}
+
+#home-slider .ism-slide-22 .ism-caption-0 {
+    font-size: 1.25em;
+    font-family: sans-serif;
+    position: absolute; top: 10%;
+    left: 5%;
+    border-radius: 4px;
+    border: none;
+    color: #fff; background-color: rgba(0, 0, 0, 0.70);
+}
+
+#home-slider .ism-slide-22 .ism-caption-1 {
+    font-size: 1.25em;
+    font-family: sans-serif;
+    position: absolute; top: 60%;
+    left: 40%;
+    border-radius: 4px;
+    border: none;
+    color: #fff; background-color: rgba(0, 0, 0, 0.70);
+}
+
+#home-slider .ism-slide-22 .ism-caption-2 {
     font-size: 1.25em;
     font-family: sans-serif;
     position: absolute; top: 20%;
